# frenetic-lib

./: .gitignore  README.md  example.py  example_beamng.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: architecture.rst  conf.py  example.rst  index.rst
frenetic/: __main__.py  frenetic.py
frenetic/core/: core.py
frenetic/core/representations/: abstract.py  bezier_generator.py  kappa_generator.py  theta_generator.py
frenetic/executors/: abstract.py  autonomoose.py  mock.py
frenetic/executors/bicycleexecutor/: carlapidonbicycle.py  vehicle.py  waypoint.py
frenetic/stopcriteria/: counter.py  timer.py
frenetic/utils/: catmull.py  random.py  trapezoidal_integration.py
src/frenetic/: frenetic.py
src/frenetic/core/: core.py  objective.py
src/frenetic/executors/: abstract_executor.py  mock.py
src/frenetic/representations/: abstract_generator.py  bezier_generator.py  cartesian_generator.py  kappa_generator.py  theta_generator.py
src/frenetic/stopcriteria/: abstract.py  counter.py  timer.py
src/frenetic/utils/: catmull.py  gaussian.py  geometry_utils.py  random.py
src/freneticlib/: __init__.py  frenetic.py
src/freneticlib/core/: core.py  objective.py
src/freneticlib/executors/: abstract_executor.py  executor.py  mock.py  outcome.py  road_validator.py
tests/: conftest.py
tests/core/: test_frenetic_core.py
tests/executors/: test_autonomoose.py  test_bicycleexecutor.py
tests/integration/: test_representations.py
tests/representations/: test_abstract_generator.py  test_abstract_representation.py
tests/stopcriteria/: test_counter.py
tests/utils/: test_random.py
(+70 files in other folders)
